AX: isSelected AX APIs don't work for some types of display:contents elements https://bugs.webkit.org/show_bug.cgi?id=255480 rdar://problem/108083208

Reviewed by Chris Fleizach.

This happens because `isSelected` is implemented for AccessibilityRenderObject and not AccessibilityNodeObject
despite the fact that the implementation does not actually require a renderer.

This patch moves the implementation to AccessibilityObject since all the required components of this logic are
available on AXCoreObject. This patch also fixes AXCoreObject::textLength for display:contents elements.

* LayoutTests/accessibility/aria-selected.html:
Add a display:contents testcase.
* LayoutTests/platform/glib/accessibility/aria-selected-expected.txt:
* LayoutTests/platform/mac/accessibility/aria-selected-expected.txt:
* LayoutTests/platform/wincairo/accessibility/aria-selected-expected.txt:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isSelected const):
(WebCore::AccessibilityObject::isTabItemSelected const):
(WebCore::AccessibilityObject::textLength const):
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textLength const): Deleted.
(WebCore::AccessibilityRenderObject::isSelected const): Deleted.
(WebCore::AccessibilityRenderObject::isTabItemSelected const): Deleted.
* Source/WebCore/accessibility/AccessibilityRenderObject.h:

Canonical link: https://commits.webkit.org/263014@main